--- a/src/views/painel-usuario.ejs
+++ b/src/views/painel-usuario.ejs
@@ -29,30 +29,35 @@
               </tr>
             </thead>%>
 
-            <div class="quadro">
-              <div class="Quadrado-Magico">
-                <div width="180px" class="numero-pedido">
-                <div class="titulo-pedido">NÚMERO DO PEDIDO</div>
-                <div class="pedido">
+            <div class="quadro-pedidos">
+              <div class="quadro-pedidos-magico">
+                <div width="180px" class="descricao-pedido-usuario">
+                <div class="titulo-pedido-usuario">NÚMERO DO PEDIDO</div>
+                <div class="numero-dos-pedidos-usuario">
                 #
                 22613775
                 </div>
                 </div>
-                <div width="140px" class="status">
-                  <div class="status-pedido">STATUS</div>
-                  <div class="cancelado">Cancelado</div>
+                <div width="140px" class="descricao-status-pedido-usuario">
+                  <div class="status-pedido-usuario">STATUS</div>
+                  <div class="para-pedido-cancelado">Cancelado</div>
                    </div>
-                   <div width="140px" class="prazo">
-                    <div class="data">DATA</div>
+                   <div width="140px" class="prazo-entrega-pedido-usuario">
+                    <div class="data-entrega-pedido-usuario">DATA</div>
                     <div class="data-numero">24/03/2021</div>
                      </div>
-                     <div width="180px" class="tipo-pagamento">
-                      <div class="pagamento">PAGAMENTO</div>
-                      <div class="tipo">Cartão de Crédito</div>
+                     <div width="180px" class="tipo-pagamento-usuario">
+                      <div class="titulo-pagamento-usuario">PAGAMENTO</div>
+                      <div class="metodo-utilizado-pagamento-usuario">Cartão de Crédito</div>
                         </div>
                        </div>
                       </div>
-
+                      <div class="quadro-pedidos-favoritos">
+                        <div class="quadro-pedidos-favoritos-descricao">
+                          <div width="180px" class="descricao-favoritos-usuario">
+                          <div class="titulo-favoritos-usuario">FAVORITOS</div>
+                          <div class="pedidos-favoritos-usuario-descritivo"> Aqui você encontra todos os produtos do seu interesse</div>
+                          </div>
                       
             <tbody>
               <tr>  </tr>
