--- a/src/views/painel-usuario.ejs
+++ b/src/views/painel-usuario.ejs
@@ -44,7 +44,7 @@
                    </div>
                    <div width="140px" class="prazo-entrega-pedido-usuario">
                     <div class="data-entrega-pedido-usuario">DATA</div>
-                    <div class="data-numero">24/03/2021</div>
+                    <div class="data-numero-entrega-pedido-usuario">24/03/2021</div>
                      </div>
                      <div width="180px" class="tipo-pagamento-usuario">
                       <div class="titulo-pagamento-usuario">PAGAMENTO</div>
