--- a/src/views/painel-usuario.ejs
+++ b/src/views/painel-usuario.ejs
@@ -28,50 +28,44 @@
               <th> Status:  </th>
               </tr>
             </thead>%>
-
-            <div class="quadro-pedidos">
-              <div class="quadro-pedidos-magico">
-                <div width="180px" class="descricao-pedido-usuario">
-                <div class="titulo-pedido-usuario">NÚMERO DO PEDIDO</div>
-                <div class="numero-dos-pedidos-usuario">
-                #
-                22613775
-                </div>
-                </div>
-                <div width="140px" class="descricao-status-pedido-usuario">
-                  <div class="status-pedido-usuario">STATUS</div>
-                  <div class="para-pedido-cancelado">Cancelado</div>
-                   </div>
-                   <div width="140px" class="prazo-entrega-pedido-usuario">
-                    <div class="data-entrega-pedido-usuario">DATA</div>
-                    <div class="data-numero-entrega-pedido-usuario">24/03/2021</div>
-                     </div>
-                     <div width="180px" class="tipo-pagamento-usuario">
-                      <div class="titulo-pagamento-usuario">PAGAMENTO</div>
-                      <div class="metodo-utilizado-pagamento-usuario">Cartão de Crédito</div>
-                        </div>
-                       </div>
-                      </div>
-                      <div class="quadro-pedidos-favoritos">
-                        <div class="quadro-pedidos-favoritos-descricao">
-                          <div width="180px" class="descricao-favoritos-usuario">
-                          <div class="titulo-favoritos-usuario">FAVORITOS</div>
-                          <div class="pedidos-favoritos-usuario-descritivo"> Aqui você encontra todos os produtos do seu interesse</div>
-                          </div>
-                      
-            <tbody>
-              <tr>  </tr>
-            </tbody>
-          </table>
+    <section class="corpo-painel-usuario">
+      <div class="quadro-pedidos">
+        <div class="quadro-pedidos-magico">
+          <div width="180px" class="descricao-pedido-usuario">
+            <div class="titulo-pedido-usuario">NÚMERO DO PEDIDO</div>
+            <div class="numero-dos-pedidos-usuario">
+              #
+              22613775
+            </div>
+          </div>
+          <div width="140px" class="descricao-status-pedido-usuario">
+            <div class="status-pedido-usuario">STATUS</div>
+            <div class="para-pedido-cancelado">Cancelado</div>
+          </div>
+          <div width="140px" class="prazo-entrega-pedido-usuario">
+            <div class="data-entrega-pedido-usuario">DATA</div>
+            <div class="data-numero-entrega-pedido-usuario">24/03/2021</div>
+          </div>
+          <div width="180px" class="tipo-pagamento-usuario">
+            <div class="titulo-pagamento-usuario">PAGAMENTO</div>
+            <div class="metodo-utilizado-pagamento-usuario">Cartão de Crédito</div>
           </div>
         </div>
-        <div class="favoritos"></div>
       </div>
-    </div>
+      <div class="quadro-pedidos-favoritos-descricao">
+        <div class="quadro-pedidos-favoritos">
+            <div class="titulo-favoritos-usuario">FAVORITOS</div>
+            <div class="pedidos-favoritos-usuario-descritivo"> Aqui você encontra todos os produtos do seu interesse
+            </div>
+        </div>
+        </div>
+    </section>
+    </table>
   </main>
   <!--footer-->
   <%- include("./partials/footer") %>
   <!--footer-fim-->
 
 </body>
+
 </html>
