--- a/src/views/painel-usuario.ejs
+++ b/src/views/painel-usuario.ejs
@@ -11,47 +11,119 @@
     <!-- panel-user -->
     <%- include("./partials/panel-user") %>
     <!--panel-user-end-->
-
-    <%#<div class="my-account">
-      <div class="account-details">
-        <h3>Minha conta</h3>
-        <p>Administre seus dados, endereço e pedidos</p>
+    <section class = "definicao-predidos">
+      <div class = "titulo-pedidos">
+        <h1>STATUS PEDIDOS</h1>
       </div>
-      <div class="caixa-detalhes">
-        <div class="pedidos">
-          <div>
-            <table>
-            <thead>
-              <tr>  
-              <th>Nº do pedido: </th>
-              <th> Realiza:  </th>
-              <th> Status:  </th>
-              </tr>
-            </thead>%>
     <section class="corpo-painel-usuario">
+      
       <div class="quadro-pedidos">
-        <div class="quadro-pedidos-magico">
-          <div width="180px" class="descricao-pedido-usuario">
-            <div class="titulo-pedido-usuario">NÚMERO DO PEDIDO</div>
-            <div class="numero-dos-pedidos-usuario">
-              #
-              22613775
-            </div>
+          <div class="todos-quadro-pedidos">
+            <div class="detalhes-pedido-titulo">NÚMERO DO PEDIDO:</div>
+            <div class="detalhes-pedido">#22613775</div>
           </div>
-          <div width="140px" class="descricao-status-pedido-usuario">
-            <div class="status-pedido-usuario">STATUS</div>
-            <div class="para-pedido-cancelado">Cancelado</div>
+          <div class="todos-quadro-pedidos">
+            <div class="detalhes-pedido-titulo">STATUS:</div>
+            <div class="detalhes-pedido">Cancelado</div>
           </div>
-          <div width="140px" class="prazo-entrega-pedido-usuario">
-            <div class="data-entrega-pedido-usuario">DATA</div>
-            <div class="data-numero-entrega-pedido-usuario">24/03/2021</div>
+          <div class="todos-quadro-pedidos">
+            <div class="detalhes-pedido-titulo">DATA:</div>
+            <div class="detalhes-pedido">24/03/2021</div>
           </div>
-          <div width="180px" class="tipo-pagamento-usuario">
-            <div class="titulo-pagamento-usuario">PAGAMENTO</div>
-            <div class="metodo-utilizado-pagamento-usuario">Cartão de Crédito</div>
+          <div class="todos-quadro-pedidos">
+            <div class="detalhes-pedido-titulo">PAGAMENTO:</div>
+            <div class="detalhes-pedido">Cartão de Crédito</div>
           </div>
+          <div class = "seta-pedidos">
+            <img src = "/images/seta.svg" />
+          </div>
+      </div>
+      <div class="quadro-pedidos">
+        <div class="todos-quadro-pedidos">
+          <div class="detalhes-pedido-titulo">NÚMERO DO PEDIDO:</div>
+          <div class="detalhes-pedido">#22613775</div>
+        </div>
+        <div class="todos-quadro-pedidos">
+          <div class="detalhes-pedido-titulo">STATUS:</div>
+          <div class="detalhes-pedido">Cancelado</div>
+        </div>
+        <div class="todos-quadro-pedidos">
+          <div class="detalhes-pedido-titulo">DATA:</div>
+          <div class="detalhes-pedido">24/03/2021</div>
+        </div>
+        <div class="todos-quadro-pedidos">
+          <div class="detalhes-pedido-titulo">PAGAMENTO:</div>
+          <div class="detalhes-pedido">Cartão de Crédito</div>
+        </div>
+        <div class = "seta-pedidos">
+          <img src = "/images/seta.svg" />
         </div>
       </div>
+      <div class="quadro-pedidos">
+      <div class="todos-quadro-pedidos">
+        <div class="detalhes-pedido-titulo">NÚMERO DO PEDIDO:</div>
+        <div class="detalhes-pedido">#22613775</div>
+      </div>
+      <div class="todos-quadro-pedidos">
+        <div class="detalhes-pedido-titulo">STATUS:</div>
+        <div class="detalhes-pedido">Cancelado</div>
+      </div>
+      <div class="todos-quadro-pedidos">
+        <div class="detalhes-pedido-titulo">DATA:</div>
+        <div class="detalhes-pedido">24/03/2021</div>
+      </div>
+      <div class="todos-quadro-pedidos">
+        <div class="detalhes-pedido-titulo">PAGAMENTO:</div>
+        <div class="detalhes-pedido">Cartão de Crédito</div>
+      </div>
+      <div class = "seta-pedidos">
+        <img src = "/images/seta.svg" />
+      </div>
+      </div>
+      <div class="quadro-pedidos">
+    <div class="todos-quadro-pedidos">
+      <div class="detalhes-pedido-titulo">NÚMERO DO PEDIDO:</div>
+      <div class="detalhes-pedido">#22613775</div>
+    </div>
+    <div class="todos-quadro-pedidos">
+      <div class="detalhes-pedido-titulo">STATUS:</div>
+      <div class="detalhes-pedido">Cancelado</div>
+    </div>
+    <div class="todos-quadro-pedidos">
+      <div class="detalhes-pedido-titulo">DATA:</div>
+      <div class="detalhes-pedido">24/03/2021</div>
+    </div>
+    <div class="todos-quadro-pedidos">
+      <div class="detalhes-pedido-titulo">PAGAMENTO:</div>
+      <div class="detalhes-pedido">Cartão de Crédito</div>
+    </div>
+    <div class = "seta-pedidos">
+      <img src = "/images/seta.svg" />
+    </div>
+      </div>
+      <div class="quadro-pedidos">
+  <div class="todos-quadro-pedidos">
+    <div class="detalhes-pedido-titulo">NÚMERO DO PEDIDO:</div>
+    <div class="detalhes-pedido">#22613775</div>
+  </div>
+  <div class="todos-quadro-pedidos">
+    <div class="detalhes-pedido-titulo">STATUS:</div>
+    <div class="detalhes-pedido">Cancelado</div>
+  </div>
+  <div class="todos-quadro-pedidos">
+    <div class="detalhes-pedido-titulo">DATA:</div>
+    <div class="detalhes-pedido">24/03/2021</div>
+  </div>
+  <div class="todos-quadro-pedidos">
+    <div class="detalhes-pedido-titulo">PAGAMENTO:</div>
+    <div class="detalhes-pedido">Cartão de Crédito</div>
+  </div>
+  <div class = "seta-pedidos">
+    <img src = "/images/seta.svg" />
+  </div>
+      </div>
+    </section>
+    <section class = "section-favoritos">
       <div class="quadro-pedidos-favoritos-descricao">
         <div class="quadro-pedidos-favoritos">
             <div class="titulo-favoritos-usuario">FAVORITOS</div>
@@ -60,7 +132,7 @@
         </div>
         </div>
     </section>
-    </table>
+  </section>
   </main>
   <!--footer-->
   <%- include("./partials/footer") %>
