--- a/src/views/painel-usuario.ejs
+++ b/src/views/painel-usuario.ejs
@@ -11,8 +11,8 @@
     <!-- panel-user -->
     <%- include("./partials/panel-user") %>
     <!--panel-user-end-->
-    <section class = "definicao-predidos">
-      <div class = "titulo-pedidos">
+    <section class = "definicao-pedidos">
+      <div class = "titulo-pedidos-favoritos">
         <h1>STATUS PEDIDOS</h1>
       </div>
     <section class="corpo-painel-usuario">
