--- a/src/views/painel-usuario.ejs
+++ b/src/views/painel-usuario.ejs
@@ -131,6 +131,13 @@
             </div>
         </div>
         </div>
+        <div class="quadro-pedidos-favoritos-descricao">
+          <div class="quadro-pedidos-favoritos">
+              <div class="titulo-favoritos-usuario">FAVORITOS</div>
+              <div class="pedidos-favoritos-usuario-descritivo"> Aqui você encontra todos os produtos do seu interesse
+              </div>
+          </div>
+          </div>
     </section>
   </section>
   </main>
